chore: update major feature need mongo schema for gql

--- a/templates/src/index.ts.ejs
+++ b/templates/src/index.ts.ejs
@@ -1,7 +1,7 @@
 import { cors } from '@elysiajs/cors'
 import { authController } from '@/controllers/authController'
 <% if (features.includes('GraphQL')) { -%>
-import yoga from '@elysiajs/yoga'
+import yoga from '@elysiajs/graphql-yoga'
 import { resolvers, typeDefs } from '@/graphql'
 <% } -%>
 <% if (database === 'MongoDB') { -%>
